--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,4 +27,5 @@ jobs:
     - name: Test
       run: go test -v ./...
       env:
-        API_KEY: ${{ secrets.API_KEY }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
